03_code2/grade.txt
Grading at Mon Aug  3 08:57:10 UTC 2020
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:7:3: error: expected ‘,’ or ‘;’ before ‘for’
   for (i=0;i<size;i++){//count from 0 (inclusive) to size (exclusive), for each number i that you count
   ^
temp.c:7:12: error: ‘i’ undeclared (first use in this function)
   for (i=0;i<size;i++){//count from 0 (inclusive) to size (exclusive), for each number i that you count
            ^
temp.c:7:12: note: each undeclared identifier is reported only once for each function it appears in
temp.c:7:22: error: expected ‘;’ before ‘)’ token
   for (i=0;i<size;i++){//count from 0 (inclusive) to size (exclusive), for each number i that you count
                      ^
temp.c:7:22: error: expected statement before ‘)’ token
temp.c:9:10: error: ‘j’ undeclared (first use in this function)
     for (j=0;j<i;j++){//count from 0 (inclusive) to i (inclusive), for each number j that you count
          ^
The code did not have legal syntax!

Overall Grade: F
